// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DropdownItem /> should render component 1`] = `
<DocumentFragment>
  .c0 {
  border-radius: .2rem;
  cursor: default;
  -webkit-transition: 100ms 0s ease-in-out;
  transition: 100ms 0s ease-in-out;
  -webkit-transition-property: background,color,fill;
  transition-property: background,color,fill;
}

<div
    class=" c0"
  >
    Content
  </div>
</DocumentFragment>
`;

exports[`<DropdownItem /> should render waveEffect 1`] = `
<DocumentFragment>
  .c0 {
  isolation: isolate;
  overflow: hidden;
  position: relative;
  -webkit-tap-highlight-color: transparent;
}

.c1 {
  border-radius: .2rem;
  cursor: default;
  -webkit-transition: 100ms 0s ease-in-out;
  transition: 100ms 0s ease-in-out;
  -webkit-transition-property: background,color,fill;
  transition-property: background,color,fill;
}

<div
    class="c0 c1"
    overflow="hidden"
  >
    Content
  </div>
</DocumentFragment>
`;
